--- a/src/main/webapp/productList.xhtml
+++ b/src/main/webapp/productList.xhtml
@@ -107,11 +107,10 @@
 		</p:dataTable>
 	</h:form>
 	
-	<p:button value="less"
-		action="#{productDAO.less}" />
+<!--	<p:button action="#{ProductDAO.less}" />
 		
 	<p:button value="more"
-		action="#{productDAO.more}" />
+		action="#{productDAO.more}" />-->
 
 </h:body>
 </html>
