--- a/src/main/webapp/userLogin.xhtml
+++ b/src/main/webapp/userLogin.xhtml
@@ -34,7 +34,7 @@
 
 			<p:messages id="msgs" />
 
-			<p:commandButton value="Log in" action="userLoginBB.login()"
+			<p:commandButton value="Log in" action="#{userLoginBB.login}"
 				style="margin-right: 1em;"/>
 
 			<p:button value="Cancel" outcome="productList.xhtml" />
