--- a/src/main/webapp/productEdit.xhtml
+++ b/src/main/webapp/productEdit.xhtml
@@ -12,7 +12,7 @@
 
 <h:head>
 	<meta charset="utf-8"/>
-	<title>Projekt bazodanowy</title>
+	<title>Edit product</title>
 </h:head>
 
 <h:body style="background-color: #eee; margin: 0.5em;">
