--- a/src/main/webapp/orderList.xhtml
+++ b/src/main/webapp/orderList.xhtml
@@ -43,6 +43,14 @@
             </f:facet>
             <h:outputText value="#{p.description}" />
         </p:column>
+            
+<!--        <p:column>
+            <f:facet name="header">
+                <h:outputText value="Test" />
+            </f:facet>
+            <h:outputText value="#{p.order}" />
+        </p:column>-->
+            
 
     </p:dataTable>
 		
