--- a/src/main/webapp/productList.xhtml
+++ b/src/main/webapp/productList.xhtml
@@ -105,7 +105,7 @@
                                      style="margin-left:4px;" />
 
                     <p:commandButton value="Buy"
-                                     action="#"
+                                     action="#{productListBB.buyProduct(p)}"
                                      style="margin-left:4px;"/>
 
                 </p:column>
