--- a/src/main/webapp/userLogin.xhtml
+++ b/src/main/webapp/userLogin.xhtml
@@ -32,10 +32,10 @@
 				
 			</h:panelGrid>
 
-			<p:messages id="msgs" />
+			<p:messages id="msgs"/>
 
 			<p:commandButton value="Log in" action="#{userLoginBB.login}"
-				style="margin-right: 1em;"/>
+				style="margin-right: 1em;" ajax="false"/>
 
 			<p:button value="Cancel" outcome="productList.xhtml" />
 		</h:form>
