--- a/src/main/webapp/productList.xhtml
+++ b/src/main/webapp/productList.xhtml
@@ -53,7 +53,7 @@
                              rendered="#{userLoginBB.isLoggedIn() and userLoginBB.hasRole('Admin')}"
                              style="margin-bottom:1em;" />
 
-            <p:dataTable value="#{productListBB.lazyModel}" var="p" paginator="true" rows="10" lazy="true" sortMode="multiple">
+            <p:dataTable value="#{productListBB.lazyModel}" var="p" paginator="true" rows="10" lazy="true" allowUnsorting="true" sortMode="multiple">
                 
                 <p:column>
                     <f:facet name="header">
